kylin-music (1.1.0-22hw) v101.hw; urgency=medium

  * [BUG] 
  - 105731, 播放音乐过程中进休眠，唤醒之后，音乐没有暂停
  - 106446, 双击已在播放列表的音乐进行播放，提示"添加失败，添加已重复1首歌曲“

 -- yushuoqi <yushuoqi@kylinos.cn>  Tue, 22 Feb 2022 17:00:27 +0800

kylin-music (1.1.0-21hw) v101.hw; urgency=medium

  * [BUG]
  - 105731, 播放音乐过程中进入休眠，唤醒之后，音乐没有暂停
  - 105563, 播放破损的音频文件无提示
  - 105245, 播放损坏音乐文件无提示
  - 95287, 双击破损音频文件无响应
  - 103946, 佩戴蓝牙耳机，触摸耳机暂停后音乐卡死
  - 102995, 删除暂停歌曲，下一首歌曲播放策略不一致
  - 96027, 重复添加歌曲无提示歌曲已存在
  - 92801, 拖动进度条至歌曲末尾，不播放下一首，重播此音乐


  * 需求号或者任务号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- yushuoqi <yushuoqi@kylinos.cn>  Thu, 10 Feb 2022 14:23:36 +0800

kylin-music (1.1.0-20hw) v101.hw; urgency=medium

  * [BUG]
  - 104822,【音乐】.aac格式音频播放时长与播放总时长不符
  - 104961,【音乐】前置3.5mm四段式耳机在位，播放音乐，拔出耳机，音乐没有暂停(一般+必现+常用功能)
  - 104818,【音乐】3.5mm耳机在位播放音乐，拔出耳机后音乐仍正常播放。（一般+必现+不常用）
  - 96064, 【音乐】拖动进度条至歌曲末尾，不播放下一首，重播此音乐
  - 95457, 【音乐】播放视频时，拔出声音输出设备，播放未暂停
  - 95561, 【音乐】多次插拔耳机后播放状态与实际不一致
  - 94932, 【音乐】热插拔声音输出设备，音乐播放暂停，图标未随之变化

  * 需求号或者任务号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- yushuoqi <yushuoqi@kylinos.cn>  Wed, 26 Jan 2022 15:19:15 +0800

kylin-music (1.1.0-19hw) v101.hw; urgency=medium

  * [BUG]
  - 95920, 【音乐】缩放率150%下，音乐标题栏图标截断显示不全 
  - 92085, 【音乐】缩放比150%，字号16，音乐图标显示不全
  - 92088, 【音乐】鼠标点击mini模式麒麟音乐，轻微向下拖动鼠标，窗口跳跃移动
  - 92317, 【音乐】使用且操作过程中闪退
  - 96944, 【声音】线控耳机音量只能减，不能加

  * 需求号或者任务号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- yushuoqi <yushuoqi@kylinos.cn>  Wed, 19 Jan 2022 14:26:41 +0800

kylin-music (1.1.0-18hw) v101.hw; urgency=medium

  * BUG号：无.
  * 需求号或者任务号：无.
  * 其他改动说明：
      - 合并主线代码：增加藏文翻译.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Wed, 25 Nov 2021 09:15:36 +0800

kylin-music (1.1.0-17hw) v101.hw; urgency=medium

  * BUG号：
      - 79522【cpm】加入不同格式音乐到播放列表，播放模式为列表循环，m4a aac格式音频播放完后自动暂停.
  * 需求号或者任务号：无.
  * 其他改动说明：无.
  * 影响域：无.

 -- liujialin <liujialin@kylinos.cn>  Tue, 28 Sep 2021 13:54:36 +0800

kylin-music (1.1.0-16hw) v101.hw; urgency=medium

  * BUG号：
      - 67326【cpm】【HUAWEI】【Audio】【V4】【L2】使用部分USB耳机时 响度比正常响度小很多.